id█pubid█title█content