@@ -1,1 +1,9 @@
-id█pubid█title█content
+id^publisherId^createdAt^editedAt^publishedAt^title^content^numOfLikes^numOfDislikes^isPublished
+3^1^23/11/2024/21/8/0^23/11/2024/21/8/45^0/0/0/0/0/0^Good Morning^Third content entry^12^3^1
+4^1^23/11/2024/21/9/10^23/11/2024/21/9/30^0/0/0/0/0/0^Breaking News^Fourth content entry^24^8^0
+5^2^2/11/2024/21/9/50^23/11/2024/21/10/15^0/0/0/0/0/0^Daily Update^Fifth content here^45^15^1
+6^3^2/11/2024/21/10/25^23/11/2024/21/10/50^0/0/0/0/0/0^Lazy String Search^Learn about lazy searching^30^5^0
+7^4^2/11/2024/21/11/5^23/11/2024/21/11/30^0/0/0/0/0/0^C++ Topics^Discussing C++ tips^75^10^1
+8^5^23/11/2024/21/11/45^23/11/2024/21/12/5^0/0/0/0/0/0^Tech Trends^Upcoming technologies to explore^50^12^1
+9^2^23/12/2024/21/12/30^23/11/2024/21/12/55^0/0/0/0/0/0^Event Recap^Summary of the latest event^20^2^0
+10^3^23/11/2023/21/13/10^23/11/2024/21/13/40^0/0/0/0/0/0^AI Basics^Getting started with AI^33^7^1
